3.36.0 - 2020-03-08
-------------------

This will be the last release supporting Python 2.

* pygobject-object: Avoid checking whether NULL is floating :mr:`135` (:user:`Alexandru Băluț <aleb>`)
* Avoid various new glib deprecation warnings
* Port to g_object_new_with_properties()
* Drop Python 2 support on Windows
* gtk overrides: Drop Menu, MenuItem for Gtk 4 (:user:`Marinus Schraal <mschraal>`)
* Docs:

  * Update openSUSE instructions (:user:`sharkwouter`)
  * Add Gaphor to Who is Using PyGObject (:user:`Dan Yeaw <danyeaw>`)
  * Remove reference to a fixed bug (:user:`Christian Stadelmann <genodeftest>`)


3.34.0 - 2019-09-09
-------------------

* No changes since 3.33.1


3.33.1 - 2019-08-18
-------------------

* Make GLib.Variant.unpack a bit less costly :mr:`121` (:user:`Mathieu Bridon <mbridon>`)
* pygobject: ignore GParameter deprecations :mr:`122` (:user:`Christian Hergert <chergert>`)
* pygobject-object: fix refcount of floating return values :mr:`120` (:user:`Mathieu Duponchelle <mathieudu>`)
* pygi-info: remove some dead code :issue:`303`


3.32.2 - 2019-06-23
-------------------

* Python 3.8b1 compatibility fixes
* tests: fix a test error when run under wayland
* setup.py: specify python_requires


3.30.5 - 2019-06-16
-------------------

* tests/gimarshallingtestsextra.c/h: relicense to LGPLv2.1+ :issue:`320`
* Fix a crash when marshalling a GError to Python fails :mr:`115`
* Fix leak of transfer-full/container C arrays :mr:`117` (:user:`Tomasz Miąsko <tmiasko>`)
* Python 3.8b1 compatibility fixes


3.32.1 - 2019-04-20
-------------------

* tests/gimarshallingtestsextra.c/h: relicense to LGPLv2.1+ :issue:`320`
* meson: add ``tests`` option for disabling tests :mr:`113` (:user:`Adam Duskett <aduskett>`)
* meson: tests: pass ``--quiet`` to g-ir-scanner :mr:`114` (:user:`Tim-Philipp Müller <tpm>`)
* Fix a crash when marshalling a GError to Python fails :mr:`115`