@@ -12,8 +12,7 @@ intersphinx_mapping = {
     'glib': ('https://lazka.github.io/pgi-docs/GLib-2.0', None),
     'gdk': ('https://lazka.github.io/pgi-docs/Gdk-3.0', None),
     'gio': ('https://lazka.github.io/pgi-docs/Gio-2.0', None),
-    'python2': ('https://docs.python.org/2.7', None),
-    'python3': ('https://docs.python.org/3', None),
+    'python': ('https://docs.python.org/3', None),
     'cairo': ('https://pycairo.readthedocs.io/en/latest', None),
 }
 
