@@ -1,3 +1,9 @@
+3.xx.x - ????-??-??
+-------------------
+
+Python 2 is no longer supported.
+
+
 3.36.0 - 2020-03-08
 -------------------
 
